version 0.99.5-beta3 xx-Sep-2010
 . [NEW] RetinaDisplay supported automatically:
	Director: winSize returns size in Points. Use winSizeInPixels for pixels
	Node: position is in Points. Use positionInPixels for pixles
	Node: contentSize is in Points. Use contentSizeInPixels for pixels
	Texture2d: contentSize is in Points. Use contentSizeInPixels for pixels
	FileUtils: Will try to load the file with the suffix "-hd" if RetinaDisplay is enabled, unless the "-hd" suffix is already present
	The following objects were enhanced to work with points:
		TMXTileMap, Sprite, SpriteFrame, Node, ParticleSystem, LabelBMFont, LabelTTF, Menu, MenuItem,
		ColorLayer, RenderTexture, MotionStreak, Transitions, Actions, LabelAtlas, AtlasNode.
	The nodes that weren't updated is because there was no need to update them.
 . [FIX] CCArray: improved speed in inserting and deleting elements
 . [FIX] Templates: Default SDK is 4.1
 . [FIX] Texture2d: Fixed possible crash in NPOT PVR images
 . [FIX] Texture2d: If Text in context can't be created return nil (prevent possible crash)
 . [FIX] Texture2d: Optimized loading time of PVR images
 
version 0.99.5-beta2 31-Ago-2010
 . [NEW] Actions: files renamed: CCXXXAction.[hm] -> CCActionXXX.[hm]
 . [NEW] Actions: Using new naming convetion:
			CCInstantAction -> CCActionInstant
			CCIntervalAction -> CCActionInterval
			CCEaseAction -> CCActionEase
			CCCameraAction -> CCActionCamera
 . [NEW] Action: CCPropertyAction renamed to CCActionTween
 . [NEW] Director: New naming convention: CCnameDirector -> CCDirectorName
 . [NEW] Director: DirectorIOS is responsible for swapping buffers
 . [NEW] Label: CCLabelAtlas#labelAtlasWithString: -> labelWithString. Old method deprecated
 . [NEW] Label: CCBitmapFontAtlas deprecated. Use CCLabelBMFont instead.
 . [NEW] Label: CCBitmapFontAtlas#bitmapFontAtlasWithString -> labelWithString. Old method deprecated.
 . [NEW] Label: CCLabel renamed to CCLabelTTF