@@ -28,11 +28,12 @@
 
 #import "CCDrawingPrimitives.h"
 #import "ccTypes.h"
+#import "ccMacros.h"
 #import "Platforms/CCGL.h"
 
 void ccDrawPoint( CGPoint point )
 {
-	ccVertex2F p = (ccVertex2F) {point.x, point.y};
+	ccVertex2F p = (ccVertex2F) {point.x * CC_CONTENT_SCALE_FACTOR(), point.y * CC_CONTENT_SCALE_FACTOR() };
 	
 	// Default GL states: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY
 	// Needed states: GL_VERTEX_ARRAY, 
@@ -61,6 +62,11 @@ void ccDrawPoints( CGPoint *points, NSUInteger numberOfPoints )
 
 	// iPhone and 32-bit machines optimization
 	if( sizeof(CGPoint) == sizeof(ccVertex2F) ) {
+
+		// convert to pixels
+		for( NSUInteger i=0; i<numberOfPoints;i++)
+			points[i] =  (CGPoint){ points[i].x * CC_CONTENT_SCALE_FACTOR(), points[i].y * CC_CONTENT_SCALE_FACTOR() };
+
 		glVertexPointer(2, GL_FLOAT, 0, points);
 		glDrawArrays(GL_POINTS, 0, numberOfPoints);
 
@@ -70,7 +76,7 @@ void ccDrawPoints( CGPoint *points, NSUInteger numberOfPoints )
 		// Mac on 64-bit
 		ccVertex2F p[numberOfPoints];
 		for( NSUInteger i=0; i<numberOfPoints;i++)
-			p[i] = (ccVertex2F) { points[i].x, points[i].y };
+			p[i] = (ccVertex2F) { points[i].x * CC_CONTENT_SCALE_FACTOR(), points[i].y * CC_CONTENT_SCALE_FACTOR() };
 			
 		glVertexPointer(2, GL_FLOAT, 0, p);
 		glDrawArrays(GL_POINTS, 0, numberOfPoints);
@@ -89,8 +95,8 @@ void ccDrawLine( CGPoint origin, CGPoint destination )
 {
 	ccVertex2F vertices[2];
 	
-	vertices[0] = (ccVertex2F) {origin.x, origin.y};
-	vertices[1] = (ccVertex2F) {destination.x, destination.y};
+	vertices[0] = (ccVertex2F) {origin.x * CC_CONTENT_SCALE_FACTOR(), origin.y * CC_CONTENT_SCALE_FACTOR() };
+	vertices[1] = (ccVertex2F) {destination.x * CC_CONTENT_SCALE_FACTOR(), destination.y * CC_CONTENT_SCALE_FACTOR() };
 
 	// Default GL states: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY
 	// Needed states: GL_VERTEX_ARRAY, 
@@ -121,6 +127,11 @@ void ccDrawPoly( CGPoint *poli, NSUInteger numberOfPoints, BOOL closePolygon )
 	glDisableClientState(GL_COLOR_ARRAY);
 	
 	if( sizeof(CGPoint) == sizeof(ccVertex2F) ) {
+
+		// convert to pixels
+		for( NSUInteger i=0; i<numberOfPoints;i++)
+			poli[i] = (CGPoint) { poli[i].x * CC_CONTENT_SCALE_FACTOR(), poli[i].y * CC_CONTENT_SCALE_FACTOR()};
+
 		// iPhone and 32-bit machines
 		glVertexPointer(2, GL_FLOAT, 0, poli);
 		
@@ -128,7 +139,7 @@ void ccDrawPoly( CGPoint *poli, NSUInteger numberOfPoints, BOOL closePolygon )
 		// 64-bit machines (Mac)
 		
 		for( NSUInteger i=0; i<numberOfPoints;i++)
-			newPoint[i] = (ccVertex2F) { poli[i].x, poli[i].y };
+			newPoint[i] = (ccVertex2F) { poli[i].x * CC_CONTENT_SCALE_FACTOR(), poli[i].y * CC_CONTENT_SCALE_FACTOR()};
 
 		glVertexPointer(2, GL_FLOAT, 0, newPoint );
 
@@ -163,11 +174,11 @@ void ccDrawCircle( CGPoint center, float r, float a, NSUInteger segs, BOOL drawL
 		GLfloat j = r * cosf(rads + a) + center.x;
 		GLfloat k = r * sinf(rads + a) + center.y;
 		
-		vertices[i*2] = j;
-		vertices[i*2+1] =k;
+		vertices[i*2] = j * CC_CONTENT_SCALE_FACTOR();
+		vertices[i*2+1] =k * CC_CONTENT_SCALE_FACTOR();
 	}
-	vertices[(segs+1)*2] = center.x;
-	vertices[(segs+1)*2+1] = center.y;
+	vertices[(segs+1)*2] = center.x * CC_CONTENT_SCALE_FACTOR();
+	vertices[(segs+1)*2+1] = center.y * CC_CONTENT_SCALE_FACTOR();
 	
 	// Default GL states: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY
 	// Needed states: GL_VERTEX_ARRAY, 
@@ -196,10 +207,10 @@ void ccDrawQuadBezier(CGPoint origin, CGPoint control, CGPoint destination, NSUI
 	{
 		GLfloat x = powf(1 - t, 2) * origin.x + 2.0f * (1 - t) * t * control.x + t * t * destination.x;
 		GLfloat y = powf(1 - t, 2) * origin.y + 2.0f * (1 - t) * t * control.y + t * t * destination.y;
-		vertices[i] = (ccVertex2F) {x, y};
+		vertices[i] = (ccVertex2F) {x * CC_CONTENT_SCALE_FACTOR(), y * CC_CONTENT_SCALE_FACTOR() };
 		t += 1.0f / segments;
 	}
-	vertices[segments] = (ccVertex2F) {destination.x, destination.y};
+	vertices[segments] = (ccVertex2F) {destination.x * CC_CONTENT_SCALE_FACTOR(), destination.y * CC_CONTENT_SCALE_FACTOR() };
 	
 	// Default GL states: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY
 	// Needed states: GL_VERTEX_ARRAY, 
@@ -226,10 +237,10 @@ void ccDrawCubicBezier(CGPoint origin, CGPoint control1, CGPoint control2, CGPoi
 	{
 		GLfloat x = powf(1 - t, 3) * origin.x + 3.0f * powf(1 - t, 2) * t * control1.x + 3.0f * (1 - t) * t * t * control2.x + t * t * t * destination.x;
 		GLfloat y = powf(1 - t, 3) * origin.y + 3.0f * powf(1 - t, 2) * t * control1.y + 3.0f * (1 - t) * t * t * control2.y + t * t * t * destination.y;
-		vertices[i] = (ccVertex2F) {x,y};
+		vertices[i] = (ccVertex2F) {x * CC_CONTENT_SCALE_FACTOR(), y * CC_CONTENT_SCALE_FACTOR() };
 		t += 1.0f / segments;
 	}
-	vertices[segments] = (ccVertex2F) {destination.x, destination.y};
+	vertices[segments] = (ccVertex2F) {destination.x * CC_CONTENT_SCALE_FACTOR(), destination.y * CC_CONTENT_SCALE_FACTOR() };
 	
 	// Default GL states: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY
 	// Needed states: GL_VERTEX_ARRAY, 
