@@ -198,7 +198,7 @@ do {															\
 	Converts a rect in pixels to points
  */
 #define CC_RECT_PIXELS_TO_POINTS(__pixels__)																		\
-	CGRectMake(__pixels__.origin.x / CC_CONTENT_SCALE_FACTOR(), __pixels__.origin.y / CC_CONTENT_SCALE_FACTOR(),	\
+	CGRectMake( __pixels__.origin.x / CC_CONTENT_SCALE_FACTOR(), __pixels__.origin.y / CC_CONTENT_SCALE_FACTOR(),	\
 			__pixels__.size.width / CC_CONTENT_SCALE_FACTOR(), __pixels__.size.height / CC_CONTENT_SCALE_FACTOR() )
 
 /** @def CC_RECT_POINTS_TO_PIXELS
